objects/sf_devops__Merge_Result__c.object
<CustomObject>
    <description>Information about merging one branch to another in the VCS</description>
    <fields>
        <fullName>sf_devops__Merge_Date__c</fullName>
        <description>The Datetime when this merge completed</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Merge Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sf_devops__Previous_Remote_Reference__c</fullName>
        <description>The VCS specific remote reference on the target branch before the merge started</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Previous Remote Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_devops__Remote_Reference__c</fullName>
        <description>The VCS specific reference to this merge</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Remote Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_devops__Source_Branch_Name__c</fullName>
        <description>the name of the branch this was a merge from.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Source Branch Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_devops__Target_Branch_Name__c</fullName>
        <description>the name of the branch this was a merge into.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Target Branch Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Merge Result</label>
    <nameField>
        <displayFormat>MR-{000000}</displayFormat>
        <label>Merge Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Merge Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>